--- a/package.json
+++ b/package.json
@@ -1,13 +1,48 @@
 {
-  "name": "martias-coin",
+  "name": "martiascoin",
   "version": "1.0.0",
+  "description": "MartiasCoin token project",
   "main": "index.js",
-  "license": "MIT",
+  "scripts": {
+    "start": "node index.js",
+    "test": "jest",
+    "lint": "eslint"
+  },
   "dependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@openzeppelin/contracts": "^5.2.0",
-    "dotenv": "^16.4.7",
-    "ethers": "^6.13.5",
-    "hardhat": "^2.22.18"
-  }
+    "axios": "^1.7.9",
+    "bignumber.js": "^9.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "ethers": "^6.1.0",
+    "express": "^4.17.1",
+    "ganache-cli": "^6.12.2",
+    "hardhat": "^2.12.7",
+    "mongoose": "^8.10.1",
+    "openzeppelin-solidity": "^4.3.2",
+    "solc": "^0.8.7",
+    "uuid": "^8.3.2",
+    "web3": "^4.16.0"
+  },
+  "devDependencies": {
+    "@nomicfoundation/solidity-analyzer-android-arm64": "file:node_modules/@nomicfoundation/solidity-analyzer-android-arm64",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@nomicfoundation/hardhat-ignition": "^0.15.9",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomicfoundation/ignition-core": "^0.15.9",
+    "@nomicfoundation/solidity-analyzer": "^0.1.2",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.0.0",
+    "@types/mocha": ">=9.1.0",
+    "eslint": "^7.32.0",
+    "hardhat-gas-reporter": "^1.0.8",
+    "jest": "^29.7.0",
+    "solidity-coverage": "^0.8.1",
+    "ts-node": ">=8.0.0"
+  },
+  "author": "Oldinn_Inc",
+  "license": "MIT"
 }
